--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             
             <table border="1" cellspacing="0" >
                 <tr>
-                    <td onclick="getvalue('')"><=</td>
-                    <td onclick="historyclean( )">ch</td>
+                    <td onclick="lastnum( )"><=</td>
+                    <td onclick="historyclear( )">ch</td>
                     <td onclick="showhistory()">H</td>
                     <td onclick="setclear( )">ac</td>
                 </tr>
