--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <table border="1" cellspacing="0" >
                 <tr>
-                    <td onclick="lastnum( )"><=</td>
+                    <td onclick="lastnum('')"><=</td>
                     <td onclick="historyclear( )">ch</td>
                     <td onclick="showhistory()">H</td>
                     <td onclick="setclear( )">ac</td>
