--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <table border="1" cellspacing="0" >
                 <tr>
                     <td onclick="lastnum('')"><=</td>
-                    <td onclick="historyclear( )">ch</td>
+                    <td onclick="clearHistory( )">ch</td>
                     <td onclick="showhistory()">H</td>
                     <td onclick="setclear( )">ac</td>
                 </tr>
